log
Sat 24 Sep 2022 01:57:29 AM UTC: 
 tests:  1|8
total_score: 0/70
8cc628b
Sat 24 Sep 2022 02:24:59 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:5: error: unknown type name ‘create’
   40 |     create spect;
      |     ^~~~~~
treemap.c:40:12: error: unused variable ‘spect’ [-Werror=unused-variable]
   40 |     create spect;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
7436c3d
Sat 24 Sep 2022 02:55:03 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
cf6a7da
Sat 24 Sep 2022 03:05:03 AM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:34: error: ‘TreeNode’ has no member named ‘key’
   79 |     if(is_equal(key,tree->current->key)){
      |                                  ^~
treemap.c:79:8: error: too few arguments to function ‘is_equal’
   79 |     if(is_equal(key,tree->current->key)){
      |        ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
treemap.c:82:13: error: expected expression before ‘)’ token
   82 |     else if(){
      |             ^
treemap.c:86:3: error: expected identifier before ‘}’ token
   86 |   }
      |   ^
Compilation failed
ebe6d73
